# skx

./: .gitignore  CMakeLists.txt  README.md
awk/: marks.txt
c/: CMakeLists.txt
c++_learn/: CMakeLists.txt  skxcppfiletest.txt
c++_learn/src/BFS/: BFS.cpp  CMakeLists.txt  test.txt
c++_learn/src/DFS/: CMakeLists.txt  DFS.cpp
c++_learn/src/cjson/: CMakeLists.txt  cJSON.c  cjsontest.cpp
c++_learn/src/classSize/: CMakeLists.txt  classsizeof.cpp
c++_learn/src/cplusplusPrimer/: CMakeLists.txt  Sales_data.h  cplus.cpp
c++_learn/src/epoll/: CMakeLists.txt  epolltest.cpp
c++_learn/src/everyDay/: CMakeLists.txt  memcpy.cpp  strcpy.cpp  strncpy.cpp
c++_learn/src/file/: CMakeLists.txt  file_use.cpp
c++_learn/src/helloWorld/: CMakeLists.txt  hello  hello.cpp  uai_log.txt  uai_log.txt.1.part
c++_learn/src/lambda/: CMakeLists.txt  Makefile  lambda.cpp
c++_learn/src/memLeakTest/: CMakeLists.txt  memleak.cpp  memleak.hpp  test.cpp
c++_learn/src/mergeFile/: CMakeLists.txt  merge_opus_files_2_1.cpp  test_opus.cpp
c++_learn/src/regex/: CMakeLists.txt  dwakeConfig  dwakeConfigNew  regex.cpp
c++_learn/src/shell/: ca-certificates.crt  crtFileConversion.sh  readme  splitFile.cpp
c++_learn/src/specialTemplate/: CMakeLists.txt  specialTemplate.cpp
c++_learn/src/staticTest/: static.cpp  test
c++_learn/src/udp/: CMakeLists.txt  main.cpp  readme  server.cpp
c++_learn/src/webocketClient/: CMakeLists.txt  main.cpp  server-udp.cpp  server.cpp  tcp_server.sh
c/src/: 2_dimentional_pointer.c  CMakeLists.txt  testhy.c
cmake_learn/cmake/t1/: CMakeLists.txt  main.c
cmake_learn/cmake/t2/: CMakeLists.txt
cmake_learn/cmake/t2/doc/: hello.txt
cmake_learn/cmake/t2/src/: CMakeLists.txt  main.c
cmake_learn/cmake/t3/: README
cmake_learn/cmake/t3/lib/: CMakeLists.txt  hello.c  hello.h
cmake_learn/cmake/t4/: CMakeLists.txt
cmake_learn/cmake/t4/src/: CMakeLists.txt  main.c
cmake_learn/cmake/t5/src/: CMakeLists.txt  main.c
cmake_learn/cmake/t6/: CMakeLists.txt
cmake_learn/cmake/t6/cmake/: FindHELLO.cmake
cmake_learn/cmake/t6/src/: CMakeLists.txt  main.c
cppLearn/: CMakeLists.txt
cppLearn/src/: CMakeLists.txt  main.cpp
haier_speex/: CMakeLists.txt  readme
haier_speex/include/: myspeex.h
haier_speex/lib/speex/lib/: skx.txt
haier_speex/src/: CMakeLists.txt  myspeex.c  mytest.c
leetcode/: 1.两数之和.cpp  2.两数相加.cpp  3.无重复字符的最长子串.cpp  5.最长回文子串.cpp  7.整数反转.cpp  9.回文数.cpp
python_learn/: quant_scoring.py  quant_strategy.py
python_learn/regex/: clip.py  search.py  text-regex.py  text.py
python_learn/regex/DeleLineBreakAfterTimestamp/: readme  test.py  test.txt  test.txt.bak
reports/: chat_summary.md  quant_strategy_report.md  scoreboard_latest.csv  stock_connect_score.csv
sed/: commands.txt  data.txt  quote.txt
strategy/JQData/: batch_test_ma_cross.py  compare_break_stop.py  compare_high_lookback.py  compare_stop_loss.py  compare_stop_simple.py  ma_cross_inside_bar_strategy.py  readme  test_optimizations.py  test_stop_conflict.py  突破前高策略_手动操作指南.md
strategy/JQData/chan/: README.md  batch_test.py  chan_strategy.py
strategy/judgeTrend/: main.py  market_data.py  readme  requirements.txt  test_single_index.py  trend_judge.py  快速开始.md  数据源说明.md
strategy/up/: .readme.swp  README_策略说明.md  analyze_aac_tech.py  backtest_1year_from_data.py  batch_backtest_hk_stocks.py  batch_backtest_hk_stocks_1year.py  hk_stocks_backtest_1year_results.csv  hk_stocks_backtest_results.csv  hk_stocks_comparison_report.md  quant_strategy.py  quant_strategy_enhanced.py  quant_strategy_visual.py  readme  readme.html  requirements.txt  strategy_stock_selection_analysis.py  trading_results.csv  策略选股逻辑总结.md
strategy/up/quant_score_system/quant_stock_selector/: README.md  (+11 more)
(+3 files in other folders)
